--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.35.0",
     "axios": "^1.7.2",
     "form-data": "^4.0.4",
+    "pdfjs-dist": "5.4.296",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "10.2.0",
     "react-router-dom": "^6.26.1"
+  },
+  "resolutions": {
+    "pdfjs-dist": "5.4.296"
   },
   "devDependencies": {
     "@types/qrcode.react": "^1.0.5",
